# Forge

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile  docker-compose.yml
docs/: architektur.md  benutzer-verwaltung.md  start_dev.md
docs/adr/: 001-generalmanager-als-backend-framework.md  002-bexio-sync-via-celery.md  003-cache-channel-layer-via-redis-url.md  004-teststrategie-pytest-vs-django-testcase.md  005-frontend-design-workflow-claude-ai.md
docs/skills/backend-design/: SKILL.md
docs/skills/frontend-design/: SKILL.md
docs/skills/testing/: SKILL.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: palette.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Counter.test.tsx  Counter.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/graphql/: mutations.ts  queries.ts  subscriptions.ts
frontend/src/lib/: apolloClient.ts
frontend/src/pages/: AufgabenPage.tsx  LoginPage.tsx  ProjektDetailPage.tsx  ProjektListePage.tsx  ProjektNeuPage.tsx  StundensaetzePage.tsx
frontend/src/utils/: add.test.ts  deviation.test.ts  deviation.ts  format.test.ts  format.ts  permissions.ts
nginx/: nginx.conf
specs/: aufgaben.md  projekt.md  projekt_kennzahlen_ci.md  setup_db.md  stunden.md  todo.md
specs/designs/: README.md  aufgaben.md  design-system.md  projektdetail.md  projektuebersicht.md  shared-components.md  stundensaetze.md
src/apps/authentication/: apps.py  permission.py  urls.py  views.py
src/apps/bexio/: admin.py  apps.py  services.py  sync.py  tasks.py
src/apps/bexio/calculation_manager/: __init__.py  projekt_kennzahlen.py
src/apps/bexio/migrations/: 0001_initial.py
src/apps/bexio/models/: __init__.py  konto.py  lieferantenrechnung.py
src/apps/projekt/: admin.py  apps.py  signals.py
src/apps/projekt/calculation_manager/: ist_wert.py  (+1 more)
src/apps/stunden/: admin.py  apps.py
src/forge/: __init__.py  asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_authentication.py  test_bexio.py  test_django.py  test_graphql_queries.py  test_kostenart.py  test_middleware.py  test_projekt_kennzahlen.py  test_system.py
tools/: setup_db.sh
(+23 files in other folders)
